--- a/package.json
+++ b/package.json
@@ -18,12 +18,22 @@
     "quality": "npm run lint && npm run typecheck && npm test"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/helmet": "^4.0.0",
     "@types/ws": "^8.18.1",
+    "async-mutex": "^0.5.0",
+    "blessed": "^0.1.81",
+    "better-sqlite3": "^12.6.2",
     "commander": "^12.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "glob": "^10.3.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/blessed": "^0.1.25",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
