--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "esModuleInterop": true,
+    "jsx": "react",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
