feat: Self-improvement orchestrator operational - 7 agents, 3 swarms, .25 budget

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@types/helmet": "^4.0.0",
     "@types/ws": "^8.18.1",
     "async-mutex": "^0.5.0",
-    "blessed": "^0.1.81",
     "better-sqlite3": "^12.6.2",
+    "blessed": "^0.1.81",
     "commander": "^12.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
@@ -37,6 +37,7 @@
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
