--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     "downlevelIteration": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "exclude": ["node_modules", "dist", "tests", "**/*.test.ts", "**/*.spec.ts"]
 }
