--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -1,38 +1,18 @@
 {
   "name": "@dash/ai",
-  "version": "2.0.0",
-  "description": "Unified LLM API for Dash with swarm-specific features and provider failover",
-  "type": "commonjs",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist",
-    "README.md"
-  ],
+  "version": "1.0.0",
+  "description": "Dash unified LLM API with provider failover",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit"
+    "test": "vitest run"
   },
   "dependencies": {
-    "@mariozechner/pi-ai": "^0.51.2"
+    "@mariozechner/pi-ai": "^0.8.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
-    "@types/node": "^20.0.0",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.0"
-  },
-  "peerDependencies": {},
-  "keywords": [
-    "dash",
-    "ai",
-    "llm",
-    "swarm",
-    "orchestration",
-    "provider-failover"
-  ],
-  "license": "MIT"
+    "typescript": "^5.0.0",
+    "vitest": "^1.0.0"
+  }
 }
