--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:performance": "ts-node tests/performance/benchmark.ts",
+    "test:perf:baseline": "ts-node tests/performance/benchmark.ts --scenario baseline",
+    "test:perf:standard": "ts-node tests/performance/benchmark.ts --scenario standard",
+    "test:perf:full": "ts-node tests/performance/benchmark.ts --scenario full",
     "dev": "ts-node src/index.ts",
     "lint": "eslint src/ --ext .ts",
     "lint:fix": "eslint src/ --ext .ts --fix",
@@ -34,12 +38,13 @@
     "jiti": "^2.6.1",
     "prom-client": "^15.1.3",
     "ws": "^8.19.0",
-    "zod": "^4.3.6"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/blessed": "^0.1.25",
     "@types/glob": "^8.1.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@types/uuid": "^10.0.0",
