feat(events): Add Redis event bus for horizontal scaling

--- a/.env.example
+++ b/.env.example
@@ -25,10 +25,39 @@ DASH_API_URL=http://localhost:7373
 DASH_API_KEY=dash-api-key
 
 # =============================================================================
-# Database Configuration
+# Database Configuration - PostgreSQL
 # =============================================================================
 
-# SQLite database path
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=dash
+POSTGRES_USER=dash
+POSTGRES_PASSWORD=dash
+POSTGRES_SSL=false
+
+# Connection Pool Settings
+POSTGRES_MIN_POOL_SIZE=2
+POSTGRES_MAX_POOL_SIZE=20
+POSTGRES_CONNECTION_TIMEOUT=5000
+POSTGRES_IDLE_TIMEOUT=30000
+
+# Retry Settings
+POSTGRES_RETRY_ATTEMPTS=3
+POSTGRES_RETRY_DELAY=1000
+
+# =============================================================================
+# Redis Configuration (for Event Bus)
+# =============================================================================
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
+
+# =============================================================================
+# SQLite Database (Legacy - for backward compatibility)
+# =============================================================================
+
 DASH_DB_PATH=./dash.db
 
 # =============================================================================
