--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "test:perf:baseline": "ts-node tests/performance/benchmark.ts --scenario baseline",
     "test:perf:standard": "ts-node tests/performance/benchmark.ts --scenario standard",
     "test:perf:full": "ts-node tests/performance/benchmark.ts --scenario full",
+    "test:integration:db": "jest --testPathPattern='database'",
     "dev": "ts-node src/index.ts",
     "lint": "eslint src/ --ext .ts",
     "lint:fix": "eslint src/ --ext .ts --fix",
     "typecheck": "tsc --noEmit",
-    "quality": "npm run lint && npm run typecheck && npm test"
+    "quality": "npm run lint && npm run typecheck && npm test",
+    "migrate": "ts-node scripts/migrate.ts",
+    "migrate:status": "ts-node scripts/migrate.ts status",
+    "migrate:create": "ts-node scripts/migrate.ts create",
+    "db:up": "docker-compose up -d postgres redis",
+    "db:down": "docker-compose down",
+    "db:logs": "docker-compose logs -f postgres redis"
   },
   "dependencies": {
     "@sinclair/typebox": "^0.34.48",
@@ -36,8 +43,11 @@
     "glob": "^10.3.0",
     "ioredis": "^5.9.2",
     "jiti": "^2.6.1",
+    "pg": "^8.13.1",
+    "pg-pool": "^3.7.0",
     "prom-client": "^15.1.3",
     "ws": "^8.19.0",
+    "yaml": "^2.5.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -47,6 +57,8 @@
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.11.10",
+    "@types/pg-pool": "^2.0.6",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
