feat(phase3): Complete Phase 3 Observability - all 4 subagents finished
Phase 3A ✅ Metrics Aggregation:
- Prometheus + Grafana + Alertmanager deployment
- 6 pre-built dashboards (swarm, agent, cost, errors, infra, logs)
- 8 critical alerting rules with PagerDuty/Slack integration
- Recording rules for SLO tracking

Phase 3B ✅ Distributed Tracing:
- OpenTelemetry SDK with auto-instrumentation
- Jaeger deployment for trace visualization
- Instrumentation for agents, tasks, workflows, database, events
- Sampling strategy with <5% overhead

Phase 3C ✅ Log Aggregation:
- Structured JSON logging with correlation IDs
- Loki + Promtail deployment
- Error pattern detection and alerting
- 7-day retention with archival

Phase 3D ✅ Enhanced Dashboard:
- React 18 + TypeScript + Tailwind dashboard
- Real-time WebSocket updates
- Hierarchical navigation (swarm → agent → task)
- Operational controls (start/stop/scale/kill)
- Mobile-responsive with PWA support

Dash v2.3 observability stack complete!

--- a/.env.example
+++ b/.env.example
@@ -111,3 +111,22 @@ LOG_LEVEL=info
 
 # Enable verbose OpenClaw logging
 VERBOSE_OPENCLAW=false
+
+# =============================================================================
+# Logging Configuration
+# =============================================================================
+
+# Service name for log entries
+DASH_SERVICE_NAME=dash
+
+# Log level override (same as LOG_LEVEL)
+DASH_LOG_LEVEL=info
+
+# Loki URL for log queries
+LOKI_URL=http://localhost:3100
+
+# Grafana URL for dashboards
+GRAFANA_URL=http://localhost:3000
+
+# Log file directory (ensure this exists)
+LOG_DIR=./logs
