--- a/package.json
+++ b/package.json
@@ -26,9 +26,32 @@
     "migrate:create": "ts-node scripts/migrate.ts create",
     "db:up": "docker-compose up -d postgres redis",
     "db:down": "docker-compose down",
-    "db:logs": "docker-compose logs -f postgres redis"
+    "db:logs": "docker-compose logs -f postgres redis",
+    "logs": "ts-node scripts/logs.ts",
+    "logs:query": "ts-node scripts/logs.ts query",
+    "logs:tail": "ts-node scripts/logs.ts tail",
+    "logs:stats": "ts-node scripts/logs.ts stats",
+    "logs:agents": "ts-node scripts/logs.ts agents",
+    "monitoring:up": "docker-compose -f monitoring/docker-compose.yml up -d",
+    "monitoring:down": "docker-compose -f monitoring/docker-compose.yml down",
+    "monitoring:logs": "docker-compose -f monitoring/docker-compose.yml logs -f",
+    "monitoring:status": "docker-compose -f monitoring/docker-compose.yml ps",
+    "loki:ready": "curl -s http://localhost:3100/ready",
+    "grafana:open": "open http://localhost:3000"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/context-async-hooks": "^2.5.0",
+    "@opentelemetry/core": "^2.5.0",
+    "@opentelemetry/exporter-jaeger": "^2.5.0",
+    "@opentelemetry/exporter-trace-otlp-grpc": "^0.211.0",
+    "@opentelemetry/instrumentation-http": "^0.211.0",
+    "@opentelemetry/instrumentation-pg": "^0.63.0",
+    "@opentelemetry/instrumentation-redis": "^0.59.0",
+    "@opentelemetry/resources": "^2.5.0",
+    "@opentelemetry/sdk-node": "^0.211.0",
+    "@opentelemetry/sdk-trace-node": "^2.5.0",
+    "@opentelemetry/semantic-conventions": "^1.39.0",
     "@sinclair/typebox": "^0.34.48",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
