WIP: Parallel remediation progress (6 agents active)
Security:
- Fixed docker-compose credentials
- Updated auth middleware

API:
- Creating REST API structure
- Adding schemas and middleware

CLI:
- Building swarmctl commands
- Adding agent management

Config:
- Config loader and schema
- Secrets manager

Docs:
- README updates
- GETTING_STARTED.md
- TROUBLESHOOTING.md

Production:
- Kubernetes manifests
- Helm charts
- Migration system

All 6 remediation agents working in parallel

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -36,8 +36,8 @@ services:
       - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
       - grafana-data:/var/lib/grafana
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-change_me_in_production}
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_SERVER_ROOT_URL=http://localhost:3000
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
@@ -107,7 +107,7 @@ services:
     ports:
       - "9187:9187"
     environment:
-      - DATA_SOURCE_NAME=postgresql://${POSTGRES_USER:-dash}:${POSTGRES_PASSWORD:-dash}@host.docker.internal:5432/${POSTGRES_DB:-dash}?sslmode=disable
+      - DATA_SOURCE_NAME=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@host.docker.internal:5432/${POSTGRES_DB}?sslmode=disable
     networks:
       - dash-monitoring
     extra_hosts:
