--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migrate": "ts-node scripts/migrate.ts",
     "migrate:status": "ts-node scripts/migrate.ts status",
     "migrate:create": "ts-node scripts/migrate.ts create",
+    "migrate:rollback": "ts-node scripts/migrate.ts rollback",
     "db:up": "docker-compose up -d postgres redis",
     "db:down": "docker-compose down",
     "db:logs": "docker-compose logs -f postgres redis",
@@ -40,6 +41,12 @@
     "grafana:open": "open http://localhost:3000"
   },
   "dependencies": {
+    "@fastify/cors": "^11.2.0",
+    "@fastify/helmet": "^13.0.2",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/swagger": "^9.6.1",
+    "@fastify/swagger-ui": "^5.2.5",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/context-async-hooks": "^2.5.0",
     "@opentelemetry/core": "^2.5.0",
@@ -63,6 +70,7 @@
     "commander": "^12.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "fastify": "^5.7.4",
     "glob": "^10.3.0",
     "ioredis": "^5.9.2",
     "jiti": "^2.6.1",
@@ -71,7 +79,8 @@
     "prom-client": "^15.1.3",
     "ws": "^8.19.0",
     "yaml": "^2.5.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.25.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
