docs: Add comprehensive documentation, README, and examples
- Create root README.md with project overview, features, quick start
- docs/GETTING_STARTED.md: Complete setup and first swarm guide
- docs/TROUBLESHOOTING.md: Common issues and error codes
- docs/ARCHITECTURE.md: System design and component diagrams
- docs/DEPLOYMENT.md: Docker, K8s, production checklist
- docs/CONTRIBUTING.md: Development setup and PR process
- examples/basic-swarm/: Simple swarm creation examples
- examples/workflow-dag/: DAG workflow configurations
- examples/ci-cd-integration/: GitHub Actions and CI/CD examples
- examples/multi-region/: Multi-region deployment patterns
- examples/custom-agent/: Custom agent implementation guide
- examples/api-client/: TypeScript client library examples
- examples/webhook-integration/: Webhook receiver examples

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Dash Configuration - OpenClaw Gateway Integration
 # Generated: 2026-02-02
 # Reference: https://docs.openclaw.ai/gateway/configuration
+#
+# SECURITY NOTICE: Never commit this file with real values to version control.
+# Copy this file to .env and fill in your actual values.
 
 # =============================================================================
 # OpenClaw Gateway Configuration
@@ -22,7 +25,26 @@ OPENCLAW_GATEWAY_TOKEN=your_openclaw_gateway_token_here
 
 # Internal Dash API for self-improvement orchestration
 DASH_API_URL=http://localhost:7373
-DASH_API_KEY=dash-api-key
+
+# SECURITY: API Key - Must be in format: dash_<prefix>_<64-hex-chars>
+# Generate with: node -e "console.log('dash_live_' + require('crypto').randomBytes(32).toString('hex'))"
+DASH_API_KEY=your_secure_api_key_here
+
+# Rate limit: requests per minute (default: 1000)
+DASH_RATE_LIMIT=1000
+
+# CORS allowed origins (comma-separated)
+DASH_CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# =============================================================================
+# Security Configuration
+# =============================================================================
+
+# SECURITY: Session secret for cookie signing (generate with: openssl rand -base64 32)
+SESSION_SECRET=your_session_secret_here_min_32_chars_long
+
+# Node environment: 'development' | 'production' | 'test'
+NODE_ENV=development
 
 # =============================================================================
 # Database Configuration - PostgreSQL
@@ -31,8 +53,8 @@ DASH_API_KEY=dash-api-key
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=dash
-POSTGRES_USER=dash
-POSTGRES_PASSWORD=dash
+POSTGRES_USER=your_postgres_user
+POSTGRES_PASSWORD=your_secure_postgres_password
 POSTGRES_SSL=false
 
 # Connection Pool Settings
@@ -51,7 +73,7 @@ POSTGRES_RETRY_DELAY=1000
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=your_redis_password_or_leave_empty
 REDIS_DB=0
 
 # =============================================================================
@@ -84,6 +106,18 @@ SELF_IMPROVEMENT_MAX_BUDGET=10.00
 
 # Maximum tokens per agent
 MAX_TOKENS_PER_AGENT=100000
+
+# =============================================================================
+# Monitoring Configuration
+# =============================================================================
+
+# Grafana Admin Credentials (required, no defaults)
+GRAFANA_ADMIN_USER=your_grafana_admin_user
+GRAFANA_ADMIN_PASSWORD=your_secure_grafana_password
+
+# pgAdmin Credentials (required, no defaults)
+PGADMIN_EMAIL=your_email@example.com
+PGADMIN_PASSWORD=your_secure_pgadmin_password
 
 # =============================================================================
 # Channel Configuration (for multi-channel routing)
