--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@opentelemetry/sdk-trace-node": "^2.5.0",
     "@opentelemetry/semantic-conventions": "^1.39.0",
     "@sinclair/typebox": "^0.34.48",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/helmet": "^4.0.0",
@@ -68,6 +69,7 @@
     "better-sqlite3": "^12.6.2",
     "blessed": "^0.1.81",
     "commander": "^12.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "fastify": "^5.7.4",
