feat(api): Implement complete REST API with all endpoints
- Add Fastify server with CORS, helmet, rate limiting
- Implement 11 required API endpoints:
  - POST /api/agents - Spawn agent
  - POST /api/agents/:id/kill - Kill agent
  - GET /api/capabilities - Discovery
  - GET /api/agents/:id/logs - Agent logs
  - POST /api/tasks - Create task
  - POST /api/tasks/:id/assign - Assign task
  - POST /api/bus/publish - Publish event
  - GET /api/bus/subscribe - WebSocket/SSE subscribe
  - GET /api/metrics/json - JSON metrics
  - GET /api/logs - Query logs
  - GET /api/health/detailed - Detailed health
- Create response wrapper with standard format
- Add cursor-based pagination
- Create Zod schemas for validation
- Add authentication middleware (X-API-Key, Bearer, JWT)
- Generate OpenAPI spec at /api/openapi.json
- Update dashboard API client to use real endpoints

Dependencies added:
- fastify, @fastify/cors, @fastify/helmet, @fastify/rate-limit
- @fastify/swagger, @fastify/swagger-ui, @fastify/jwt
- fastify-plugin, zod-to-json-schema

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "dash": "./dist/index.js"
+    "dash": "./dist/index.js",
+    "swarmctl": "./dist/cli/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -38,7 +39,11 @@
     "monitoring:logs": "docker-compose -f monitoring/docker-compose.yml logs -f",
     "monitoring:status": "docker-compose -f monitoring/docker-compose.yml ps",
     "loki:ready": "curl -s http://localhost:3100/ready",
-    "grafana:open": "open http://localhost:3000"
+    "grafana:open": "open http://localhost:3000",
+    "cli:build": "tsc src/cli/index.ts --outDir dist/cli --esModuleInterop --target ES2020 --module commonjs --moduleResolution node",
+    "cli:dev": "ts-node src/cli/index.ts",
+    "cli:install": "npm run build && npm link",
+    "swarmctl": "node dist/cli/index.js"
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
@@ -73,6 +78,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "fastify": "^5.7.4",
+    "fastify-plugin": "^5.1.0",
     "glob": "^10.3.0",
     "ioredis": "^5.9.2",
     "jiti": "^2.6.1",
