--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,26 @@ OPENCLAW_GATEWAY_URL=ws://127.0.0.1:18789
 # Obtain this from your OpenClaw configuration or via `openclaw config get`
 OPENCLAW_GATEWAY_TOKEN=your_openclaw_gateway_token_here
 
+# =============================================================================
+# OpenClaw-Dash Integration (SPEC-002)
+# =============================================================================
+
+# Enable OpenClaw to use Dash as native orchestration platform
+OPENCLAW_DASH_ADAPTER_ENABLED=true
+
+# Webhook URL for forwarding Dash events to OpenClaw
+# OpenClaw will receive real-time agent events at this endpoint
+OPENCLAW_EVENT_WEBHOOK_URL=https://your-openclaw-instance.com/webhooks/dash
+
+# Event filter - comma-separated list of event types to forward
+# Leave empty to forward all events
+# Examples: agent.spawned,agent.completed,agent.failed,agent.progress
+OPENCLAW_EVENT_FILTER=
+
+# Webhook authentication token (optional)
+# If set, events will include Authorization: Bearer header
+OPENCLAW_WEBHOOK_AUTH_TOKEN=
+
 # Session identifier (optional, auto-generated if not set)
 # OPENCLAW_SESSION=
 
