test: SPEC-003 E2E workflow scenario - COMPLETE
- tests/integration/scenarios/e2e-workflow.test.ts
- Complete code review workflow test

SPEC-003: All 11 scenarios complete! 🎉

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:perf:baseline": "ts-node tests/performance/benchmark.ts --scenario baseline",
     "test:perf:standard": "ts-node tests/performance/benchmark.ts --scenario standard",
     "test:perf:full": "ts-node tests/performance/benchmark.ts --scenario full",
+    "test:integration": "jest tests/integration/scenarios --testTimeout=120000 --runInBand",
+    "test:integration:watch": "jest tests/integration/scenarios --testTimeout=120000 --watch",
+    "test:integration:coverage": "jest tests/integration/scenarios --testTimeout=120000 --coverage --runInBand",
     "test:integration:db": "jest --testPathPattern='database'",
     "dev": "ts-node src/index.ts",
     "lint": "eslint src/ --ext .ts",
