--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/helmet": "^4.0.0",
     "@types/ws": "^8.18.1",
     "async-mutex": "^0.5.0",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
     "blessed": "^0.1.81",
     "commander": "^12.0.0",
@@ -94,6 +95,7 @@
     "zod-to-json-schema": "^3.25.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/blessed": "^0.1.25",
     "@types/glob": "^8.1.0",
